feat auth screens design change [ci]

--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -6,27 +6,29 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content class="bg_color" fullscreen>
-    <div class="banner">
-        <div class="banner_img center_img">
-            <img src="assets/images/banner_img.png" class="crop_img">
-            <div class="logo animate__animated animate__fadeInUp">
-                <h1>{{ 'Reset your password' | translate }}</h1>
+<ion-content class="bg_color forgot-password-screen" fullscreen>
+    <div class="background-image">
+        <img src="assets/images/banner_img.png" alt="">
+    </div>
+
+    <div class="form-container">
+        <div class="header-section">
+            <button type="button" class="back-button" (click)="goBack()">
+                <ion-icon name="chevron-back-outline"></ion-icon>
+            </button>
+            <h1 class="page-title">{{ 'Reset your password' | translate }}</h1>
+        </div>
+
+        <div class="input-group">
+            <label class="input-label">EMAIL</label>
+            <div class="input-wrapper">
+                <ion-input [(ngModel)]="email" placeholder="Enter your Email" type="email" fill="solid"></ion-input>
+                <ion-icon name="mail-outline" class="input-icon"></ion-icon>
             </div>
         </div>
-    </div>
 
-    <div class="form" >
-        <ion-list>
-            <ion-item class="animate__animated animate__fadeInUp">
-                <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'Email' | translate"
-                    type="email"></ion-input>
-            </ion-item>
-        </ion-list>
+        <ion-button expand="block" class="submit-button" (click)="submit()">
+            {{'Submit' | translate}}
+        </ion-button>
     </div>
 </ion-content>
-
-<ion-footer class="ion-no-border animate__animated animate__fadeInUp">
-    <ion-button size="large" expand="round" class="btn"
-        (click)="submit()">{{'Submit' | translate}}</ion-button>
-</ion-footer>
