--- a/client/src/app/register/register.page.html
+++ b/client/src/app/register/register.page.html
@@ -34,7 +34,7 @@
             <div class="input-group">
                 <label class="input-label">NAME</label>
                 <div class="input-wrapper">
-                    <ion-input formControlName="name" placeholder="Enter your Name" type="text" fill="outline"></ion-input>
+                    <ion-input formControlName="name" placeholder="Enter your Name" type="text" fill="solid"></ion-input>
                     <ion-icon name="person-outline" class="input-icon"></ion-icon>
                 </div>
             </div>
@@ -42,7 +42,7 @@
             <div class="input-group">
                 <label class="input-label">EMAIL</label>
                 <div class="input-wrapper">
-                    <ion-input formControlName="email" placeholder="Enter your Email" type="email" fill="outline"></ion-input>
+                    <ion-input formControlName="email" placeholder="Enter your Email" type="email" fill="solid"></ion-input>
                     <ion-icon name="mail-outline" class="input-icon"></ion-icon>
                 </div>
             </div>
@@ -50,7 +50,7 @@
             <div class="input-group">
                 <label class="input-label">PASSWORD</label>
                 <div class="input-wrapper">
-                    <ion-input formControlName="password" placeholder="Enter your password" type="password" fill="outline">
+                    <ion-input formControlName="password" placeholder="Enter your password" type="password" fill="solid">
                         <ion-input-password-toggle slot="end"></ion-input-password-toggle>
                     </ion-input>
                 </div>
@@ -59,7 +59,7 @@
             <div class="input-group">
                 <label class="input-label">CONFIRM YOUR PASSWORD</label>
                 <div class="input-wrapper">
-                    <ion-input formControlName="passwordConfirm" placeholder="Enter your password" type="password" fill="outline">
+                    <ion-input formControlName="passwordConfirm" placeholder="Enter your password" type="password" fill="solid">
                         <ion-input-password-toggle slot="end"></ion-input-password-toggle>
                     </ion-input>
                 </div>
