--- a/client/src/app/sign-in/sign-in.page.html
+++ b/client/src/app/sign-in/sign-in.page.html
@@ -13,7 +13,7 @@
             <div class="input-group">
                 <label class="input-label">EMAIL</label>
                 <div class="input-wrapper">
-                    <ion-input formControlName="email" placeholder="Enter your Email" type="email" fill="outline"></ion-input>
+                    <ion-input formControlName="email" placeholder="Enter your Email" type="email" fill="solid"></ion-input>
                     <ion-icon name="mail-outline" class="input-icon"></ion-icon>
                 </div>
             </div>
@@ -21,7 +21,7 @@
             <div class="input-group">
                 <label class="input-label">PASSWORD</label>
                 <div class="input-wrapper">
-                    <ion-input formControlName="password" placeholder="Enter your password" type="password" fill="outline">
+                    <ion-input formControlName="password" placeholder="Enter your password" type="password" fill="solid">
                         <ion-input-password-toggle slot="end"></ion-input-password-toggle>
                     </ion-input>
                 </div>
